--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "melee",
 	"version": "1.0.0",
 	"private": "true",
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
@@ -17,14 +18,14 @@
 		"preact": "^10.5.15"
 	},
 	"devDependencies": {
-		"@preact/preset-vite": "^2.1.5",
+		"@preact/preset-vite": "^2.5.0",
 		"eslint": "^8.8.0",
 		"eslint-config-preact": "^1.3.0",
 		"eslint-config-prettier": "^9.1.0",
 		"prettier": "^3.1.0",
-		"stylelint": "^15.3.0",
-		"stylelint-config-standard": "^34.0.0",
+		"stylelint": "^16.6.1",
+		"stylelint-config-standard": "^36.0.1",
 		"stylelint-order": "^6.0.3",
-		"vite": "^4.5.1"
+		"vite": "^5.3.1"
 	}
 }
