--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"eslint": "^8.8.0",
 		"eslint-config-preact": "^1.3.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-react": "^7.34.3",
+		"eslint-plugin-react-hooks": "^4.6.2",
 		"prettier": "^3.1.0",
 		"stylelint": "^16.6.1",
 		"stylelint-config-standard": "^36.0.1",
